Implement match starting functionality